Fix use restriction overflows (#533)
* camel case not allowed in DOM

* camel case not allowed in DOM

* add div

* add media query

* make text respnisve enough

* align button

* make margins smaller on the side for the whole app

* fix small

* fix query

* fix test

* pre commit

* pre commit

* Update src/datadoc_editor/assets/multidropdown_style.css


---------

--- a/src/datadoc_editor/assets/header.css
+++ b/src/datadoc_editor/assets/header.css
@@ -12,7 +12,6 @@
 .ssb-title.main-title {
     color: #274247;
     padding: 0;
-    margin-left: 1rem;
 }
 
 .ssb-link.with-icon .link-text{
