--- a/src/datadoc_editor/assets/multidropdown_style.css
+++ b/src/datadoc_editor/assets/multidropdown_style.css
@@ -8,6 +8,12 @@
   margin: 0
 }
 
+.input-group-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 .add-use-restriction {
   margin-top: auto;
 }
@@ -80,17 +86,20 @@
     margin-top: 1.8rem;
 }
 
-.input-group-container {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
 .input-group-row {
   display: flex;
   gap: 1rem;
   align-items: flex-start;
-  padding-bottom: 0.8rem;
+  padding: 0 0.8rem 0.8rem 0;
+  margin-bottom: 1rem;
+  max-width: 100%;
+}
+
+.date-button-row {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  width: 30%;
 }
 
 .ssb-input.input-component:has(input[id*="date-use_restrictions"]) {
@@ -99,30 +108,27 @@
 }
 
 .multidropdown-delete-button {
-  position: relative;
-  width: 32px;
-  height: 32px;
+  width: 2rem;
+  height: 2rem;
   border-radius: 50%;
   border: 1px solid #d32f2f;
   background-color: #f44336;
   color: white;
   cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 20px;
+  font-size: 1.25rem;
   font-weight: bold;
   transition: background-color 0.2s ease, transform 0.1s ease;
-  margin-top: 30px;
   flex-shrink: 0;
+  margin-top: 1rem;
 }
 
 .multidropdown-delete-button::before {
   content: "";
-  position: absolute;
-  width: 14px;
-  height: 2px;
+  width: 0.875rem;
+  height: 0.125rem;
   background-color: white;
+  display: block;
+  margin: auto;
 }
 
 .multidropdown-delete-button:hover {
@@ -145,4 +151,53 @@
 
 .multidropdown-fieldset > button.ssb-btn.secondary-btn {
   margin-top: 0.2rem;
+}
+
+.input-group-row .ssb-dropdown.dropdown-component {
+  width: 60%;
+}
+
+@media (max-width: 1180px) {
+  .input-group-container {
+      flex-direction: column;
+  }
+  .input-group-row{
+      border: 1px solid green;
+      padding: 0.8rem;
+      flex-wrap: wrap;
+      flex-direction: column;
+  }
+  .input-group-row .ssb-dropdown.dropdown-component {
+      width: 100%;
+}
+
+  .date-button-row {
+    flex-direction: row;
+    gap: 0.6rem;
+    width: 100%;
+    justify-items: flex-start;
+  }
+
+  #use-restriction-list-container > div > .ssb-dropdown .dropdown-interactive-area button {
+    font-size: 0.9rem;
+  }
+  #dataset-metadata-input-right > fieldset > button{
+      font-size: 0.9rem;
+  }
+
+  .multidropdown-delete-button::before {
+    width: 0.75rem;
+    height: 0.1rem;
+  }
+  #use-restriction-list-container > div > .ssb-dropdown .dropdown-interactive-area button{
+    word-break: break-word;
+    hyphens: auto;
+  }
+  .ssb-dropdown.dropdown-component{
+    min-width: unset;
+
+  }
+  .date-button-row > .multidropdown-delete-button{
+    margin-top: 1rem;
+  }
 }
